--- a/package.json
+++ b/package.json
@@ -18,9 +18,16 @@
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
+    "@fortawesome/angular-fontawesome": "^0.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.0.1",
