--- a/package.json
+++ b/package.json
@@ -48,5 +48,9 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.3.2"
+  },
+  "engines" : { 
+    "npm" : "8.5.4",
+    "node" : "16.14.0"
   }
 }
